--- a/src/templates/all_recipes.html
+++ b/src/templates/all_recipes.html
@@ -11,8 +11,11 @@
             <h3>{{ recipe.name }}</h3>
             <p><strong>Ingredients:</strong> {{ recipe.ingredients }}</p>
             <p><strong>Instructions:</strong> {{ recipe.instructions }}</p>
+            <div class="recipe-actions">
+                <a href="{{ url_for('edit_recipe', recipe_id=loop.index0) }}" class="edit-btn">Edit</a>
+                <a href="{{ url_for('delete_recipe', recipe_id=loop.index0) }}" class="delete-btn">Delete</a>
+            </div>
         </div>
-        
         {% endfor %}
     </div>
 {% else %}
