--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block content %}
+{% block content %} <!--  menu page -->
 <div class="menu">
     <a href="{{ url_for('all_recipes') }}">All Recipes</a>
     <a href="{{ url_for('search_name') }}">Search by Name</a>
